# foo

./: .envrc  .gitignore  Dockerfile  README.md  agent.yaml  cloudbuild.yaml  pyproject.toml
foo/: action_parser.py  actor.py  actor_genx.py  actor_utils.py  agent.py  agent_genx.py  agent_proc.py  buffer.py  cli.py  device_utils.py  img.py  infer.py  learner.py  prompts.py  qwen_server.py  qwen_server_simple.py  server.py  train.py  unsloth_trainer.py
foo/actor/: base.py  img.py  oai.py  orign.py  swift.py
foo/bk/: actor.py  agent.py
foo/validator/: base.py
train/: README.md  molmo.py
