[project]
name = "Foo"
version = "0.1.3"
description = "AI agent for An agent that can learn any task"
authors = ["Patrick Barker <patrickbarkerco@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.27",
    "pydantic>=2.6.3",
    "requests>=2.31.0",
    "fastapi[all]>=0.109",
    "json-repair>=0.30.2",
    "openai>=1.59.3",
    "uvicorn>=0.34.2",
    "surfkit==0.1.410",
    "typer>=0.9.4",
    "orign==0.2.91",
]

[dependency-groups]
dev = [
    "flake8>=7.0.0",
    "black>=24.2.0",
    "pytest>=8.0.2",
    "ipykernel>=6.29.3",
    "pytest-env>=1.1.3",
    "cowpilot>=0.1.0",
]

[tool.pyright]
reportUnknownParameterType = false
reportMissingTypeArgument = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportPrivateUsage = false
reportUntypedFunctionDecorator = false
reportUntypedBaseClass = false
